fix #47 - math container alignment

--- a/inst/includes/stylesheets/custom.css
+++ b/inst/includes/stylesheets/custom.css
@@ -213,11 +213,32 @@ td {
 
 /* Math container */
 .math-container {
+    display: inline;
+}
+
+.math-container p {
     text-align: center;
 }
 
-.math-container span.math {
-    margin: 0 auto;
+.math-container .math {
+    border: 0 none;
+    direction: ltr;
+    display: inline;
+    float: none;
+    font-size: 100%;
+    font-size-adjust: none;
+    font-style: normal;
+    font-weight: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    text-indent: 0;
+    text-transform: none;
+    white-space: nowrap;
+    word-spacing: normal;
+    word-wrap: normal;
 }
 
 /* Mobile */
